syntax = "proto3";

package keystore.v1alpha1;

import "google/protobuf/struct.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/jon-whit/api-protos/keystore/v1alpha1;keystore";

message GetRequest {
    string key = 1;
}

message GetResponse {
    string key = 1;
    google.protobuf.Value value = 2;
}

message SetRequest {
    string key = 1;
    google.protobuf.Value value = 2;
}

message DeleteRequest {
    string key = 1;
}

service Keystore {
    rpc Get(GetRequest) returns (GetResponse);
    rpc Set(SetRequest) returns (google.protobuf.Empty);
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}